assets/player.css
/* ... */
@keyframes spinLogo {
    0% {
        transform: rotate(0deg);
    }

    70% {
        transform: rotate(360deg);
    }

    100% {
        transform: rotate(360deg);
    }
}

.player .logo:after {
    content: '';
    width: 70%;
    height: 70%;
    position: absolute;
    top: 15%;
    left: 15%;
    background-image: url("./mycujoo-logo-ball.svg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    animation: spinLogo 1.2s ease infinite 1.5s;
}

.player .placeholder-image {
  background-image: url("./placeholder-audio.jpg");
}

.player .gradient {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  top: 0;
}

.player img, .player video {
  display: none;
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: #000;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  object-fit: fill;
}

.player .media-info {
  padding-bottom: 64px;
  display: flex;
  align-items: center;
  overflow: hidden;
}

.player .media-artwork {
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
  height: 143px;
  margin-right: 32px;
  min-width: 96px;
  max-width: 256px;
  width: 100%;
  border-radius: 4px;
  overflow: hidden;
}

.player .media-text {
  width: 100%;
}

.player .media-info .media-title {
  color: rgba(255, 255, 255, 0.8);
  font-size: 44px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 80%;
}

.player .media-info .media-subtitle {
  color: rgba(203, 203, 203, 0.8);
  font-size: 22px;
  overflow: hidden;
  width: 80%;
}

.player .media-info .media-subtitle span:not(:first-child):before {
  content: '\00B7';
  padding-left: 10px;
  padding-right: 10px;
  font-weight: bold;
}

.player .controls {
  display: none;
  bottom: 0;
  height: 32px;
  left: 0;
  position: absolute;
  right: 0;
}

.player .controls-play-pause {
  background-size: 32px;
  background-position: center;
  border: 0;
  float: left;
  height: 32px;
  margin-left: 0;
  margin-top: 0;
  width: 32px;
  border: 1px solid red;
}

.player .overlay {
  position: absolute;
  left: 64px;
  bottom: 64px;
  right: 64px;
  display: none;
  top: auto;
}

.player .watermark {
  position: absolute;
  top: 64px;
  left: 64px;
  bottom: 64px;
  right: 64px;
  display: none;
  background-position: bottom right;
  background-repeat: no-repeat;
  margin-bottom: 54px;
  background-image: url("./watermark.png");
}

.player .gradient {
  display: none;
  opacity: 0.9;
  background: linear-gradient(
    to top,
    rgba(0, 0, 0, 1.0),
    rgba(0, 0, 0, 0.0) 72%,
    rgba(0, 0, 0, 0.0) 100%
  );
}

.player .progressBar {
  background-color: #0BD280;
}

.player .controls-progress {
  background-color: rgba(255, 255, 255, 0.2);
  height: 8px;
  margin-top: 12px;
  overflow: hidden;
  position: relative;
}

.player .controls-progress-inner {
  height: 100%;
  opacity: 0.8;
}

.player .controls-progress-thumb {
  height: 100%;
  width: 3px;
  background-color: rgba(255, 255, 255, 0.5);
  position: absolute;
  top: 0;
  margin-left: -3px;
}

.player .controls-cur-time,
.player .controls-total-time {
  color: rgba(255, 255, 255, 0.8);
  font-size: 16px;
  font-weight: 400;
}

.player .controls-cur-time {
  float: left;
  line-height: 30px;
  margin-left: 15px;
  margin-right: 15px;
}

.player .controls-total-time {
  float: right;
  line-height: 30px;
  margin-left: 15px;
}

.player .preview-mode-info {
  padding-bottom: 54px;
  display: none;
  margin: -143px 0 0 0;
  overflow: hidden;
}

.player .preview-mode-artwork {
  align-self: flex-end;
  height: 143px;
  margin-right: 32px;
  min-width: 96px;
  max-width: 266px;
  width: 100%;
  border-radius: 50%;
  background: #222224;
  position: relative;
}

.player .preview-mode-artwork:after {
    content: '';
    width: 70%;
    height: 70%;
    position: absolute;
    top: 15%;
    left: 15%;
    background-image: url("./mycujoo-logo-ball.svg");
    background-size: cover;
    background-position: bottom;
    background-repeat: no-repeat;
}

.player .preview-mode-info .preview-mode-text {
  width: 100%;
  align-self: flex-end;
}

.player .preview-mode-info .preview-mode-title {
  color: rgba(255, 255, 255, 0.8);
  font-size: 44px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 80%;
}

.player .preview-mode-info .preview-mode-subtitle {
  color: rgba(203, 203, 203, 0.8);
  font-size: 22px;
  overflow: hidden;
  width: 80%;
}

.player .preview-mode-info .preview-mode-subtitle span:not(:first-child):before {
  content: '\00B7';
  padding-left: 10px;
  padding-right: 10px;
  font-weight: bold;
}

.player .preview-mode-info .preview-mode-timer {
  display: flex;
  color: #0BD280;
  font-size: 22px;
  overflow: hidden;
  width: 80%;
}

.player .preview-mode-info .preview-mode-timer-starts {
  font-weight: bold;
}

/* ------------------------------------------------- */
/* Player - Video                                    */
/* ------------------------------------------------- */

/* ------------------------------------------------- */
/* Player - Video - Launching                        */
/* ------------------------------------------------- */

.player[type="video"][state="launching"] .overlay {
  display: block;
}

.player[type="video"][state="launching"] .logo {
  display: block;
}

.player[type="video"][state="launching"] .controls,
.player[type="video"][state="launching"] .media-info,
.player[type="video"][state="launching"] .media-artwork {
  display: none;
}

.player[type="video"][state="launching"] .spinner {
  -webkit-animation: spin 1s infinite linear;
  height: 32px;
  width: 32px;
  display: block;
  position: absolute;
  background-image: url("./buffering.png");
  background-size: 32px;
  bottom: 64px;
  left: 50%;
  margin-left: 32px / -2;
}
/* ... */

